# BusinessSysMan

./: .gitmodules  LICENSE  README.md
DocsEN/: ClassDiagramEnglish.html  ClassDiagramEnglish.xml
DocsPT/: DiagramaCasoDeUsoOficinaNew.xml  DiagramaDeClassesPortugues.html  DiagramaDeClassesPortugues.xml  GerenciarFluxoDeCiaxa.ep  pre-documentacao.odt  template_Article.tex
docs/EN/: ClassDiagramEnglish.xml  UseCasesDiagramEnglish.xml  documentation.tex
docs/PT/: DiagramaCasoDeUsoOficinaNew.xml  DiagramaCasoDeUsoOficinaOld.xml  DiagramaDeClassesPortugues.xml  Diagrama_Casos_Uso_SIS_BSM.xml  documentacao.tex
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Cash.cpp  Cash.h  Cashier.cpp  Cashier.h  Customer.h  Date.h  Debt.cpp  Debt.h  Deferred.cpp  Deferred.h  Employee.h  Income.cpp  Income.h  Installments.cpp  Installments.h  Payment.h  Person.h  Purpose.cpp  Purpose.h  Trading.cpp  Trading.h  TypeOfExpense.cpp  TypeOfExpense.h  User.h  Vacation.cpp  Vacation.h
src/qtgui/: CMakeLists.txt
src/qtgui/Headers/: mainwindow.h
src/qtgui/Sources/: main.cpp  mainwindow.cpp
src/tests/: CMakeLists.txt
