enable_testing()
find_package(GTest)
if(GTEST_FOUND)
	include_directories(. ${GTEST_INCLUDE_DIRS})
	file(GLOB tests_LIB_SOURCES ./*.cpp)
	file(GLOB tests_LIB_HEADERS ./*.h)
	add_executable(BSMtests ${tests_LIB_SOURCES} ${tests_LIB_HEADERS})
	target_link_libraries(BSMtests BSMcore ${GTEST_LIBRARIES})
	add_test(BSMtesting BSMtests)
endif(GTEST_FOUND)
